--- a/Prim/README
+++ b/Prim/README
@@ -1,7 +1,39 @@
-Conteúdo
-- Consjunto de instâncias (instances)
-- Soluções do problema da árvore geradora mínima (gabarito_agm.txt)
-- Script para testar as soluções (Bat1.sh)
+# Prim Algorithm
 
-Para executar o script compile seu binários. Se preciso atualize os nomes dos arquivos no início do script.
-Para testar se as arestas pertencem ao grafo original compile o arquivo agm.cpp e gere o binário com o nome agm.
+## Description
+- Instances of the problem are in the folder [instances](./instances)
+- The file [gabarito_agm.txt](./gabarito_agm.txt) contains the solutions of the instances
+
+## How to use
+
+To execute the program, compile the binaries. If needed, update the file names at the beginning of the script [Bat1.sh](./Bat1.sh).
+
+```bash
+$ make
+```
+
+To execute the test series, run the following command:
+```bash
+$ ./Bat1.sh
+```
+
+If you want to execute the program with a single instance, run the following command:
+```bash
+$ ./prim.bin -f <instance_file>
+```
+
+You can write -h to see the help message:
+```bash
+$ ./prim.bin -h
+```
+
+## Input file format
+
+The input file must be in the following format:
+
+```
+<number_of_nodes> <number_of_edges>
+<origin_node> <destination_node> <edge_weight>
+<origin_node> <destination_node> <edge_weight>
+...
+```
